--- a/Sites/templates/footer.html
+++ b/Sites/templates/footer.html
@@ -1,7 +1,7 @@
 <br>
 <br>
 <form action="../index.php" method="get">
-    <input type="submit" value="Volver al menú principal">
+    <input class="Retornar" type="submit" value="Volver al menú principal">
 </form>
 </body>
 
