--- a/Sites/styles/mystyles.css
+++ b/Sites/styles/mystyles.css
@@ -147,10 +147,10 @@ th {
 }
 
 tr:hover {
-    background-color: #f5f5f5;
+    background-color: #88B3BB;
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #88B3BB;
 }
 
