--- a/Sites/templates/body_prelogin.html
+++ b/Sites/templates/body_prelogin.html
@@ -15,14 +15,14 @@
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
           <form class="d-flex">
-            <a class="btn btn-outline-success" href="../pages/login.php" role="button">Log in</a>
+            <a class="btn btn-outline-success" href="../pages/login.php" role="button">Iniciar Sesion</a>
           </form>
         </div>
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
           <form class="d-flex">
-            <a class="btn btn-outline-success" href="../pages/register.php" role="button">Sing up</a>
+            <a class="btn btn-outline-success" href="../pages/register.php" role="button">Registrarse</a>
           </form>
         </div>
       </div>
