--- a/Sites/templates/body_prelogin.html
+++ b/Sites/templates/body_prelogin.html
@@ -8,10 +8,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <form align="center" action="../index.php" method="post">
+            <form align="center" action="index.php" method="post">
               <input class="submit" type="submit" value="Home">
             </form>
-            
+            <a class="nav-link active" aria-current="page" href="../index.php">Home</a>
           </li>
         </ul>
       </div>
