--- a/Sites/templates/body_prelogin.html
+++ b/Sites/templates/body_prelogin.html
@@ -11,14 +11,13 @@
             <form align="center" action="index.php" method="post">
               <input class="submit" type="submit" value="Home">
             </form>
-            <a class="nav-link active" aria-current="page" href="../index.php">Home</a>
           </li>
         </ul>
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <form class="d-flex">
-            <a class="btn btn-outline-success" href="../pages/login.php" role="button">Iniciar Sesion</a>
+          <form class="d-flex" action="pages/login.php">
+            <a class="btn btn-outline-success" role="button">Iniciar Sesion</a>
           </form>
         </div>
       </div>
