--- a/Sites/templates/body_prelogin.html
+++ b/Sites/templates/body_prelogin.html
@@ -16,8 +16,8 @@
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <form class="d-flex" action="pages/login.php">
-            <a class="btn btn-outline-success" role="button">Iniciar Sesion</a>
+          <form class="d-flex">
+            <a class="btn btn-outline-success" action="pages/login.php" role="button">Iniciar Sesion</a>
           </form>
         </div>
       </div>
