--- a/Sites/templates/body_prelogin.html
+++ b/Sites/templates/body_prelogin.html
@@ -17,6 +17,7 @@
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
           <form class="d-flex" action="pages/login.php">
+            <input class="btn btn-outline-success" type="submit" value="Iniciar Sesion">
             <a class="btn btn-outline-success" type="submit" role="button">Iniciar Sesion</a>
           </form>
         </div>
