--- a/Sites/templates/body_prelogin.html
+++ b/Sites/templates/body_prelogin.html
@@ -17,15 +17,14 @@
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
           <form class="d-flex" action="pages/login.php">
-            <input class="btn btn-outline-success" type="submit" value="Iniciar Sesion">
-            <a class="btn btn-outline-success" type="submit" role="button">Iniciar Sesion</a>
+            <input class="btn btn-outline-success" type="submit" role="button" value="Iniciar Sesion">
           </form>
         </div>
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <form class="d-flex">
-            <a class="btn btn-outline-success" href="../pages/register.php" role="button">Registrarse</a>
+          <form class="d-flex" action="pages/register.php">
+            <input class="btn btn-outline-success" type="submit" role="button" value="Registrarse">
           </form>
         </div>
       </div>
