--- a/Sites/templates/i_body_prelogin.html
+++ b/Sites/templates/i_body_prelogin.html
@@ -1,14 +1,12 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.php">Mi Tienda Online</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand">Mi Tienda Online</a>
+      
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <form align="center" action="../index.php" method="post">
+            <form align="center" action="index.php" method="post">
               <input class="submit" type="submit" value="Home">
             </form>
           </li>
@@ -16,14 +14,14 @@
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <form class="d-flex" action="../pages/login.php">
+          <form class="d-flex" action="pages/login.php">
             <input class="btn btn-outline-success" type="submit" role="button" value="Iniciar Sesion">
           </form>
         </div>
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <form class="d-flex" action="../pages/register.php">
+          <form class="d-flex" action="pages/register.php">
             <input class="btn btn-outline-success" type="submit" role="button" value="Registrarse">
           </form>
         </div>
