--- a/Sites/templates/body_prelogin.html
+++ b/Sites/templates/body_prelogin.html
@@ -1,7 +1,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <form class="d-flex" action="../index.php">
+      <form action="../index.php">
         <input class="navbar-brand" type="submit" value="Mi Tienda Online">
       </form>
       <a class="navbar-brand" href="../index.php">Mi Tienda Online</a>
