--- a/Sites/templates/i_body_prelogin.html
+++ b/Sites/templates/i_body_prelogin.html
@@ -1,28 +1,28 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand">Mi Tienda Online</a>
-      
+      <a class="navbar-brand" href="index.php">Mi Tienda Online</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <form align="center" action="index.php" method="post">
-              <input class="submit" type="submit" value="Home">
-            </form>
+            <a class="nav-link active" aria-current="page" href="index.php">Home</a>
           </li>
         </ul>
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <form class="d-flex" action="pages/login.php">
-            <input class="btn btn-outline-success" type="submit" role="button" value="Iniciar Sesion">
+          <form class="d-flex">
+            <a class="btn btn-outline-success" href="pages/login.php" role="button">Iniciar Sesion</a>
           </form>
         </div>
       </div>
       <div class="d-flex flex-row-reverse bd-highlight">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <form class="d-flex" action="pages/register.php">
-            <input class="btn btn-outline-success" type="submit" role="button" value="Registrarse">
+          <form class="d-flex">
+            <a class="btn btn-outline-success" href="pages/register.php" role="button">Registrarse</a>
           </form>
         </div>
       </div>
