--- a/Sites/templates/i_body_postlogin_jefe.html
+++ b/Sites/templates/i_body_postlogin_jefe.html
@@ -26,7 +26,7 @@
               <li><a class="dropdown-item" href="#">Historial</a></li>
               <li><a class="dropdown-item" href="#">Info unidad despacho</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="pages/register.php">Log out</a></li>
+              <li><a class="dropdown-item" href="pages/logout.php">Log out</a></li>
             </ul>
         </ul>
       </div>
