--- a/Sites/templates/i_body_postlogin_normal.html
+++ b/Sites/templates/i_body_postlogin_normal.html
@@ -25,7 +25,7 @@
               <li><a class="dropdown-item" href="#">Mi perfil</a></li>
               <li><a class="dropdown-item" href="#">Historial</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="pages/register.php">Log out</a></li>
+              <li><a class="dropdown-item" href="pages/logout.php">Log out</a></li>
             </ul>
         </ul>
       </div>
