--- a/Sites/templates/body_postlogin_normal.html
+++ b/Sites/templates/body_postlogin_normal.html
@@ -19,7 +19,7 @@
           
           <li class="nav-item dropdown dropstart">
             <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="icons/person.svg" alt="" width="30" height="24" class="d-inline-block align-text-center">
+              <img src="../icons/person.svg" alt="" width="30" height="24" class="d-inline-block align-text-center">
             </button>
             <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
               <li><a class="dropdown-item" href="#">Mi perfil</a></li>
