--- a/Sites/templates/body_postlogin_jefe.html
+++ b/Sites/templates/body_postlogin_jefe.html
@@ -22,7 +22,7 @@
               <img src="../icons/person.svg" alt="" width="30" height="24" class="d-inline-block align-text-center">
             </button>
             <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+              <li><a class="dropdown-item" href="../pages/perfil_jefe.php">Mi perfil</a></li>
               <li><a class="dropdown-item" href="#">Historial</a></li>
               <li><a class="dropdown-item" href="#">Info unidad despacho</a></li>
               <li><hr class="dropdown-divider"></li>
