--- a/Sites/templates/body_postlogin_jefe.html
+++ b/Sites/templates/body_postlogin_jefe.html
@@ -24,7 +24,7 @@
             <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
               <li><a class="dropdown-item" href="../pages/perfil_jefe.php">Mi perfil</a></li>
               <li><a class="dropdown-item" href="#">Historial</a></li>
-              <li><a class="dropdown-item" href="#">Info unidad despacho</a></li>
+              <!--<li><a class="dropdown-item" href="#">Info unidad despacho</a></li>-->
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="../pages/logout.php">Log out</a></li>
             </ul>
