--- a/Sites/templates/body_postlogin.html
+++ b/Sites/templates/body_postlogin.html
@@ -24,6 +24,7 @@
             <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
               <li><a class="dropdown-item" href="../pages/perfil.php">Mi perfil</a></li>
               <li><a class="dropdown-item" href="#">Historial</a></li>
+              <li><a class="dropdown-item" href="../pages/change_pass.php">Cambiar contraseña</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="../pages/logout.php">Log out</a></li>
             </ul>
