--- a/Sites/templates/header.html
+++ b/Sites/templates/header.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="../style/style.css">
     <script src="../js/rut.js"></script>
+    <script src="../js/check.js"></script>
     
 
     <title>Tienda Online</title>
