--- a/Sites/templates/header.html
+++ b/Sites/templates/header.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/centrado.css">
     <script src="../js/rut.js"></script>
     <script src="../js/check.js"></script>
     
