--- a/Sites/style/centrado.css
+++ b/Sites/style/centrado.css
@@ -11,6 +11,8 @@
 }
 
 .espacio{
-    margin-bottom: 10px;
+    display:block;
+    width: 100%;
+    height: 5px;
     background-color: #DCE1E3;
 }
