--- a/Sites/style/centrado.css
+++ b/Sites/style/centrado.css
@@ -11,8 +11,6 @@
 }
 
 .espacio{
-    display:block;
-    width: 100%;
-    height: 5px;
+    margin-bottom: 10px;
     background-color: #DCE1E3;
 }
