--- a/Sites/templates/body_postlogin.html
+++ b/Sites/templates/body_postlogin.html
@@ -14,7 +14,7 @@
             <a class="nav-link active" aria-current="page" href="../pages/tiendas.php">Tiendas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../pages/productos.php"><img src="../icons/cart.svg" alt="" width="30" height="24" class="d-inline-block align-text-center"></a>
+            <a class="nav-link active" aria-current="page" href="../pages/carrito.php"><img src="../icons/cart.svg" alt="" width="30" height="24" class="d-inline-block align-text-center"></a>
           </li>
           
           <li class="nav-item dropdown dropstart">
