--- a/Sites/templates/body_postlogin.html
+++ b/Sites/templates/body_postlogin.html
@@ -1,4 +1,5 @@
-<body>
+<body style='background-color:#E6EAEB'>
+>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.php">Mi Tienda Online</a>
